# copper

./: .gitignore  CLAUDE.md  FINAL_UI_REPORT.md  Makefile  README.demo.md  README.md  SCHEMA_REFERENCE.md  UI_IMPROVEMENTS.md  UI_USAGE_GUIDE.md  antlr4  copper_parse.py  demo_final_ui.py  demo_ui.py  package-lock.json  prd.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_ui.py  setup.py  start-manual.sh  start-simple.sh  start.sh  start_ui.py  test_complete_workflow.py  test_ui_fixes.py  test_ui_workflow.py
.claude/: settings.local.json
.claude/agents/: business-analytics-expert.md  fullstack-app-builder.md
api/: antlr_parser.py  copper_parser.py  copper_parser_minimal.py  main.py  server-manual.py
app/: start.sh
app/api/: .gitignore  antlr_parser.py  dax_parser.py  main.py  requirements.txt  server-manual.py  test_dax_parser.py  test_parser.py
app/web/: index.html
copper/executors/: __init__.py  pandas_executor.py
copper/parser/: antlr_parser.py  ast_nodes.py
copper/query/: builder.py
copper/semantic/: loader.py
docs/: model.md
example-projects/: README.md
example-projects/basic-tutorial/: README.md  minimal.copper  simple.copper
example-projects/ecommerce-demo/: README.md  complete_example.copper  customers.copper  orders_view.copper  with_expressions.copper
example-projects/ufc-analytics/: README.md  ufc_events.copper  ufc_fighters.copper  ufc_fights.copper  ufc_sample.db
examples/: README.md  base_ecommerce_view.copper  basic_demo.py  customers.copper  ecommerce.copper  ecommerce_orders.copper  load_example.py  products.copper  saas_metrics.copper  sales_analysis_view.copper  simple.copper  simple_demo.yaml  ufc_analytics.copper  ufc_demo.py  ufc_events.copper  ufc_fighters.copper  ufc_fights.copper  with_expressions.copper
examples/cps/: NOBLE_MARKET_SHARE_REPORT.md
examples/datasets/: README.md  create_ufc_data.py
examples/ecommerce/: datasources.yaml  model.yaml
examples/saas/: datasources.yaml  (+1 more)
grammar/: Copper.g4  CopperSimple.g4  DAX.g4  DAXParser.g4  README.md  build.gradle  build.sh  copper.ebnf  dax.ebnf  requirements.txt  setup.py  test_simple.copper
parser/: README.md  __init__.py  ast_nodes.py  copper_parser.py  parser.py  test_parser.py  tokenizer.py
spec/: SPECIFICATION.md
src/: __init__.py
studio/: README.md  jest.config.js  jest.setup.js  next.config.ts  package.json  tailwind.config.ts
tests/: __init__.py  test_pandas_executor.py  test_query_builder.py  test_semantic_model.py  test_sql_generator.py
tools/: semantic_model_runner.py
ui/: README.md  __init__.py  app.py  charts.py  copper_interface.py  dashboard.py  test_ui.py
webapp/: package-lock.json  package.json
(+131 files in other folders)
